feat: refactor layout, alert, font provider

--- a/src/infrastructures/locales/de/translation.json
+++ b/src/infrastructures/locales/de/translation.json
@@ -1,3 +1,5 @@
 {
-  "test": "Hallo"
+  "hello": "Hallo",
+  "metadata_title": "Nächste App erstellen",
+  "metadata_description": "Wird durch „Nächste App erstellen“ generiert"
 }
