--- a/src/infrastructures/locales/fa/translation.json
+++ b/src/infrastructures/locales/fa/translation.json
@@ -1,3 +1,5 @@
 {
-  "test": "تست"
+  "hello": "سلام",
+  "metadata_title": "برنامه بعدی را ایجاد کنید",
+  "metadata_description": "ایجاد شده توسط ایجاد برنامه بعدی"
 }
