--- a/src/infrastructures/locales/fa/translation.json
+++ b/src/infrastructures/locales/fa/translation.json
@@ -3,5 +3,8 @@
     "hello": "سلام",
     "metadata_title": "The FA metadata title of the page",
     "metadata_description": "The FA metadata description of the page",
-    "second-page": "صفحه دوم"
+    "home": "صفحه اصلی",
+    "about-us": "درباره ما",
+    "rules": "قوانین",
+    "blog": "وبلاگ"
 }
