--- a/src/infrastructures/locales/fa/translation.json
+++ b/src/infrastructures/locales/fa/translation.json
@@ -6,5 +6,10 @@
     "home": "صفحه اصلی",
     "about-us": "درباره ما",
     "rules": "قوانین",
-    "blog": "وبلاگ"
+    "blog": "وبلاگ",
+    "news": "اخبار",
+    "language": "FA",
+    "sign-out": "خروج",
+    "login": "ورود",
+    "register": "ثبت نام"
 }
