--- a/src/infrastructures/locales/en/translation.json
+++ b/src/infrastructures/locales/en/translation.json
@@ -1,14 +1,15 @@
 {
-  "home_page_title": "The EN title of the home page",
-  "metadata_title": "The EN metadata title of the page",
-  "metadata_description": "The EN metadata description of the page",
-  "email-place-holder": "email-place-holder",
-  "your-email": "your-email",
-  "your-password": "your-password",
-  "enter-your-password": "enter-your-password",
-  "repeat-your-password": "repeat-your-password",
-  "terms-and-conditions": "terms-and-conditions",
-  "register-new-user": "register-new-user",
-  "hello": "Hi",
-  "second-page": "Second Page"
+    "home_page_title": "The EN title of the home page",
+    "metadata_title": "The EN metadata title of the page",
+    "metadata_description": "The EN metadata description of the page",
+    "hello": "Hi",
+    "email-place-holder": "Enter your email",
+    "your-email": "Your Email",
+    "your-password": "Your Password",
+    "enter-your-password": "Enter your password",
+    "repeat-your-password": "Repeat Your Password",
+    "terms-and-conditions": "Terms and Conditions",
+    "register-new-user": "register-new-user",
+    "repeat-your-password-placeholder": "Repeat your password",
+    "i-agree-with-the": "I agree with the"
 }
