refactor: update and remove the language changes

--- a/src/infrastructures/locales/de/translation.json
+++ b/src/infrastructures/locales/de/translation.json
@@ -1,4 +1,5 @@
 {
+  "home_page_title": "The DE title of the home page",
   "hello": "Hallo",
   "metadata_title": "Nächste App erstellen",
   "metadata_description": "Wird durch „Nächste App erstellen“ generiert"
