--- a/src/infrastructures/locales/fa/translation.json
+++ b/src/infrastructures/locales/fa/translation.json
@@ -1,4 +1,5 @@
 {
+  "home_page_title": "The IR title of the home page",
   "hello": "سلام",
   "metadata_title": "برنامه بعدی را ایجاد کنید",
   "metadata_description": "ایجاد شده توسط ایجاد برنامه بعدی"
