feat: added required fields to register form

--- a/src/infrastructures/locales/de/translation.json
+++ b/src/infrastructures/locales/de/translation.json
@@ -10,5 +10,6 @@
     "repeat-your-password": "Wiederholen Sie Ihr Passwort",
     "repeat-your-password-placeholder": "Wiederholen Sie Ihr Passwort",
     "i-agree-with-the": "Ich stimme mit dem",
-    "terms-and-conditions": "Bedingungen und Konditionen"
+    "terms-and-conditions": "Bedingungen und Konditionen",
+    "register-new-user": "Registrieren"
 }
