--- a/src/infrastructures/locales/en/translation.json
+++ b/src/infrastructures/locales/en/translation.json
@@ -9,7 +9,7 @@
     "enter-your-password": "Enter your password",
     "repeat-your-password": "Repeat Your Password",
     "terms-and-conditions": "Terms and Conditions",
-    "register-new-user": "register-new-user",
+    "register-new-user": "Register",
     "repeat-your-password-placeholder": "Repeat your password",
     "i-agree-with-the": "I agree with the"
 }
