--- a/src/infrastructures/locales/fa/translation.json
+++ b/src/infrastructures/locales/fa/translation.json
@@ -10,5 +10,6 @@
     "repeat-your-password": "تکرار کلمه عبور",
     "repeat-your-password-placeholder": "کلمه عبور خود را تکرار کنید",
     "i-agree-with-the": "من موافقم با",
-    "terms-and-conditions": "شرایط و ضوابط"
+    "terms-and-conditions": "شرایط و ضوابط",
+    "register-new-user": "ثبت نام"
 }
