--- a/src/infrastructures/locales/en/translation.json
+++ b/src/infrastructures/locales/en/translation.json
@@ -1,13 +1,13 @@
 {
   "home_page_title": "The EN title of the home page",
-  "metadata_title": "The metadata title of the page",
-  "metadata_description": "The metadata description of the page",
-  "test": "Hello",
+  "metadata_title": "The EN metadata title of the page",
+  "metadata_description": "The EN metadata description of the page",
   "email-place-holder": "email-place-holder",
   "your-email": "your-email",
   "your-password": "your-password",
   "enter-your-password": "enter-your-password",
   "repeat-your-password": "repeat-your-password",
   "terms-and-conditions": "terms-and-conditions",
-  "register-new-user": "register-new-user"
+  "register-new-user": "register-new-user",
+  "hello": "Hi"
 }
