--- a/src/infrastructures/locales/de/translation.json
+++ b/src/infrastructures/locales/de/translation.json
@@ -2,5 +2,6 @@
   "home_page_title": "The DE title of the home page",
   "hello": "Hallo",
   "metadata_title": "The DE metadata title of the page",
-  "metadata_description": "The DE metadata description of the page"
+  "metadata_description": "The DE metadata description of the page",
+  "second-page": "Zweite Seite"
 }
