--- a/src/infrastructures/locales/en/translation.json
+++ b/src/infrastructures/locales/en/translation.json
@@ -9,5 +9,6 @@
   "repeat-your-password": "repeat-your-password",
   "terms-and-conditions": "terms-and-conditions",
   "register-new-user": "register-new-user",
-  "hello": "Hi"
+  "hello": "Hi",
+  "second-page": "Second Page"
 }
