fix: removed second page

--- a/src/infrastructures/locales/fa/translation.json
+++ b/src/infrastructures/locales/fa/translation.json
@@ -1,7 +1,7 @@
 {
-  "home_page_title": "The IR title of the home page",
-  "hello": "سلام",
-  "metadata_title": "The FA metadata title of the page",
-  "metadata_description": "The FA metadata description of the page",
-  "second-page": "صفحه دوم"
+    "home_page_title": "صفحه اصلی",
+    "hello": "سلام",
+    "metadata_title": "The FA metadata title of the page",
+    "metadata_description": "The FA metadata description of the page",
+    "second-page": "صفحه دوم"
 }
