--- a/src/infrastructures/locales/en/translation.json
+++ b/src/infrastructures/locales/en/translation.json
@@ -11,5 +11,29 @@
     "terms-and-conditions": "Terms and Conditions",
     "register-new-user": "Register",
     "repeat-your-password-placeholder": "Repeat your password",
-    "i-agree-with-the": "I agree with the"
+    "i-agree-with-the": "I agree with the",
+    "user-has-been-registered-successfully": "User has been registered successfully",
+    "one-or-more-fields-are-invalid": "One or more fileds are invalid",
+    "please-go-to-the-login-page": "Please go to the login page",
+    "login": "Login",
+    "username": "Username",
+    "enter-your-username": "Enter your username",
+    "email": "Email",
+    "first-name": "First Name",
+    "enter-your-first-name": "Enter your first name",
+    "last-name": "Last Name",
+    "enter-your-last-name": "Enter your last name",
+    "gender": "Gender",
+    "male": "Male",
+    "female": "Female",
+    "date-of-birth": "Date of Birth",
+    "phone-number": "Phone Number",
+    "phone-number-prefix-place-holder": "Enter your country's prefix number",
+    "enter-your-countrys-prefix-number": "Enter your country's prefix number",
+    "enter-your-phone-number": "Enter your phone number",
+    "password": "Password",
+    "enter-password": "Enter your password",
+    "repeat-password": "Repeat Password",
+    "enter-your-password-again": "Enter your password again",
+    "passwords-do-not-match": "Passwords do not match"
 }
