--- a/src/infrastructures/locales/fa/translation.json
+++ b/src/infrastructures/locales/fa/translation.json
@@ -1,6 +1,5 @@
 {
     "home_page_title": "صفحه اصلی",
-    "hello": "سلام",
     "metadata_title": "The FA metadata title of the page",
     "metadata_description": "The FA metadata description of the page",
     "your-email": "ایمیل شما",
@@ -11,5 +10,28 @@
     "repeat-your-password-placeholder": "کلمه عبور خود را تکرار کنید",
     "i-agree-with-the": "من موافقم با",
     "terms-and-conditions": "شرایط و ضوابط",
-    "register-new-user": "ثبت نام"
+    "register-new-user": "ثبت نام",
+    "hello": "سلام",
+    "user-has-been-registered-successfully": "کاربر با موفقیت ثبت شد",
+    "one-or-more-fields-are-invalid": "یک یا چند ورودی نامعتبر است",
+    "please-go-to-the-login-page": "لطفا به صفحه ورود بروید",
+    "login": "وارد شدن",
+    "username": "نام کاربری",
+    "enter-your-username": "نام کاربری خود را وارد کنید",
+    "email": "ایمیل",
+    "first-name": "نام",
+    "enter-your-first-name": "نام خود را وارد نمایید",
+    "last-name": "نام خانوادگی",
+    "enter-your-last-name": "نام خانوادگی خود را وارد کنید",
+    "gender": "جنسیت",
+    "male": "مرد",
+    "female": "رن",
+    "date-of-birth": "تاریخ تولد",
+    "phone-number": "تلفن همراه",
+    "enter-your-countrys-prefix-number": "شماره پیشوند کشور خود را وارد کنید",
+    "enter-your-phone-number": "شماره تلفن همراه خود را وارد کنید",
+    "password": "کلمه عبور",
+    "repeat-password": "تکرار کلمه عبور",
+    "enter-your-password-again": "کلمه عبور خود را دوباره وارد کنید",
+    "passwords-do-not-match": "کلمه های عبور مطابقت ندارند"
 }
