feat: working on register button component unit test

--- a/src/infrastructures/locales/en/translation.json
+++ b/src/infrastructures/locales/en/translation.json
@@ -10,5 +10,6 @@
   "terms-and-conditions": "terms-and-conditions",
   "register-new-user": "register-new-user",
   "hello": "Hi",
-  "second-page": "Second Page"
+  "second-page": "Second Page",
+  "register": "Register"
 }
