--- a/src/infrastructures/locales/de/translation.json
+++ b/src/infrastructures/locales/de/translation.json
@@ -3,5 +3,6 @@
   "hello": "Hallo",
   "metadata_title": "The DE metadata title of the page",
   "metadata_description": "The DE metadata description of the page",
-  "second-page": "Zweite Seite"
+  "second-page": "Zweite Seite",
+  "register": "Registrieren"
 }
