--- a/src/infrastructures/locales/en/translation.json
+++ b/src/infrastructures/locales/en/translation.json
@@ -13,5 +13,9 @@
   "second-page": "Second Page",
   "register": "Register",
   "login": "Login",
-  "logout": "Logout"
+  "logout": "Logout",
+  "username": "Username",
+  "password": "Password",
+  "cancel": "Cancel",
+  "forgot_password": "Forgot Password"
 }
